--- a/test.ipynb
+++ b/test.ipynb
@@ -2,35 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "47df799e",
+   "execution_count": 28,
+   "id": "c463968f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mohan/anaconda3/envs/unity/lib/python3.9/site-packages/ale_py/roms/__init__.py:89: DeprecationWarning: Automatic importing of atari-py roms won't be supported in future releases of ale-py. Please migrate over to using `ale-import-roms` OR an ALE-supported ROM package. To make this warning disappear you can run `ale-import-roms --import-from-pkg atari_py.atari_roms`.For more information see: https://github.com/mgbellemare/Arcade-Learning-Environment#rom-management\n",
-      "  ROMS = resolve_roms()\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W O O O W\n",
-      "W O O O W\n",
-      "W O A O W\n",
-      "W O O T W\n",
-      "W W W W W\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mohan/anaconda3/envs/unity/lib/python3.9/site-packages/gym/spaces/box.py:128: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n"
+      "[['W' 'O' 'O' 'O' 'W']\n",
+      " ['W' 'O' 'O' 'O' 'W']\n",
+      " ['W' 'O' 'A' 'O' 'W']\n",
+      " ['W' 'O' 'O' 'T' 'W']\n",
+      " ['W' 'W' 'W' 'W' 'W']]\n"
      ]
     }
    ],
@@ -41,34 +25,174 @@
     "\n",
     "env = GridEnv(load_chars_rep_fromd_dir = 'EnvSettings/SimpleTarget.txt')\n",
     "env.reset()\n",
-    "print(env.init_chars_representation)"
+    "print(env.chars_world)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5a515cca",
+   "execution_count": 16,
+   "id": "9d50338a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1., 0.])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'A', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': False, 'truncated': False, 'done': False, 'move_result': [0, 0, 1, 0]}\n"
+     ]
     }
    ],
    "source": [
-    "env.actions.UP()"
+    "o=env.step(action = env.actions.DOWN())\n",
+    "print(o[1], o[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e8ed9d6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'A', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': False, 'truncated': False, 'done': False, 'move_result': [0, 0, 1, 0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=env.step(action = env.actions.UP())\n",
+    "print(o[1], o[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5572a982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'A', 'W'],\n",
+      "       ['W', 'O', 'O', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': False, 'truncated': False, 'done': False, 'move_result': [0, 1, 0, 0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=env.step(action = env.actions.RIGHT())\n",
+    "print(o[1], o[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "36f6bb5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'A', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': False, 'truncated': False, 'done': False, 'move_result': [0, 1, 0, 0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=env.step(action = env.actions.LEFT())\n",
+    "print(o[1], o[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2e4003d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'A', 'W'],\n",
+      "       ['W', 'O', 'O', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': True, 'truncated': False, 'done': True, 'move_result': [0, 1, 0, 1]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=env.step(action = env.actions.DOWNRIGHT())\n",
+    "print(o[1], o[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "66157f10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'A', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': True, 'truncated': False, 'done': True, 'move_result': [0, 0, 0, 1]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=env.step(action = env.actions.DOWNLEFT())\n",
+    "print(o[1], o[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a3f7411e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 {'chars_world': array([['W', 'O', 'O', 'A', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': True, 'truncated': False, 'done': True, 'move_result': [1, 1, 0, 0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "o=env.step(action = env.actions.UPRIGHT())\n",
+    "print(o[1], o[3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64019c9f",
+   "id": "72062ca4",
    "metadata": {},
    "outputs": [],
    "source": []
