--- a/test.ipynb
+++ b/test.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "cfd8619d",
+   "execution_count": 1,
+   "id": "f73f88c9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mohan/anaconda3/envs/unity/lib/python3.9/site-packages/ale_py/roms/__init__.py:89: DeprecationWarning: Automatic importing of atari-py roms won't be supported in future releases of ale-py. Please migrate over to using `ale-import-roms` OR an ALE-supported ROM package. To make this warning disappear you can run `ale-import-roms --import-from-pkg atari_py.atari_roms`.For more information see: https://github.com/mgbellemare/Arcade-Learning-Environment#rom-management\n",
+      "  ROMS = resolve_roms()\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -15,6 +23,14 @@
       " ['W' 'O' 'A' 'O' 'W']\n",
       " ['W' 'O' 'O' 'T' 'W']\n",
       " ['W' 'W' 'W' 'W' 'W']]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mohan/anaconda3/envs/unity/lib/python3.9/site-packages/gym/spaces/box.py:128: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n"
      ]
     }
    ],
@@ -31,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bcbf1f3f",
+   "id": "a0ca3071",
    "metadata": {},
    "outputs": [
     {
@@ -53,21 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "79808207",
+   "execution_count": 6,
+   "id": "6eb2fb24",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'GridEnv' object has no attribute 'char_world'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_21106/3644438108.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/GitRepos/rlgridworld/rlgridworld/gridenv.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m    134\u001b[0m             \u001b[0mtruncated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m             \u001b[0mdone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m             info = {\n\u001b[0m\u001b[1;32m    137\u001b[0m                 \u001b[0;34m'chars_world'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchars_world\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m                 \u001b[0;34m'terminated'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mterminated\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/GitRepos/rlgridworld/rlgridworld/gridenv.py\u001b[0m in \u001b[0;36mmove_to\u001b[0;34m(self, y, x, result)\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GridEnv' object has no attribute 'char_world'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 {'chars_world': array([['O', 'H', 'T'],\n",
+      "       ['O', 'O', 'A'],\n",
+      "       ['O', 'O', 'O']], dtype='<U1'), 'terminated': True, 'truncated': False, 'done': True, 'move_result': [0, 0, 0, 1]}\n"
      ]
     }
    ],
@@ -78,19 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "5dc84eda",
+   "execution_count": 5,
+   "id": "bf763fcb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
-      "       ['W', 'O', 'O', 'O', 'W'],\n",
-      "       ['W', 'O', 'O', 'A', 'W'],\n",
-      "       ['W', 'O', 'O', 'T', 'W'],\n",
-      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': False, 'truncated': False, 'done': False, 'move_result': [0, 1, 0, 0]}\n"
+      "0 {'chars_world': array([['O', 'H', 'T'],\n",
+      "       ['O', 'O', 'A'],\n",
+      "       ['O', 'O', 'O']], dtype='<U1'), 'terminated': False, 'truncated': False, 'done': False, 'move_result': [0, 0, 1, 0]}\n"
      ]
     }
    ],
@@ -102,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7b248a6a",
+   "id": "647d464b",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "870a061e",
+   "id": "b54b1c8f",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "962b1c84",
+   "id": "2a94b0da",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "44aa0837",
+   "id": "c2707d99",
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "be75e088",
+   "execution_count": 3,
+   "id": "033e6469",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c62d135e",
+   "id": "3273c6ac",
    "metadata": {},
    "outputs": [],
    "source": []
