--- a/test.ipynb
+++ b/test.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "b54b1c8f",
    "metadata": {},
    "outputs": [
@@ -216,11 +216,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 {'chars_world': array([['W', 'O', 'O', 'O', 'W'],\n",
+      "1 {'chars_world': array([['W', 'H', 'T', 'O', 'W'],\n",
+      "       ['W', 'O', 'O', 'H', 'W'],\n",
       "       ['W', 'O', 'O', 'O', 'W'],\n",
-      "       ['W', 'O', 'O', 'A', 'W'],\n",
-      "       ['W', 'O', 'O', 'T', 'W'],\n",
-      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': True, 'truncated': False, 'done': True, 'move_result': [0, 1, 0, 1]}\n"
+      "       ['W', 'O', 'A', 'T', 'W'],\n",
+      "       ['W', 'W', 'W', 'W', 'W']], dtype='<U1'), 'terminated': True, 'truncated': False, 'done': True, 'move_result': [0, 0, 1, 1]}\n"
      ]
     }
    ],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "033e6469",
    "metadata": {},
    "outputs": [
@@ -341,10 +341,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f03fb9fd250>"
+       "<matplotlib.image.AxesImage at 0x7f39734e8a30>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,8 +370,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb556229",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "width = 90\n",
+    "height = 10\n",
+    "resized = cv2.resize(env.chars_world_to_rgb_array(env.chars_world), (width, height), interpolation = cv2.INTER_NEAREST)\n",
+    "cv2.imshow('game', resized)\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "477c2f74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('game', env.chars_world_to_rgb_array(env.chars_world))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a34760f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(resized, np.ndarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bd77427a",
+   "id": "24c9debe",
    "metadata": {},
    "outputs": [],
    "source": []
